--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -112,7 +112,7 @@ a {
   -ms-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
   transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
   border-bottom: dotted 1px;
-  color: #f56a6a;
+  color: #e9bd15;
   text-decoration: none; }
   a:hover {
     border-bottom-color: #f56a6a;
@@ -1343,7 +1343,8 @@ ul.actions {
 ul.icons {
   cursor: default;
   list-style: none;
-  padding-left: 0; }
+  padding-left: 0;
+  color: purple; }
   ul.icons li {
     display: inline-block;
     padding: 0 1em 0 0; }
@@ -1492,11 +1493,11 @@ button,
   -webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
   -ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
   transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-  background-color: transparent;
+  background-color: pink;
   border-radius: 0.375em;
   border: 0;
   box-shadow: inset 0 0 0 2px #f56a6a;
-  color: #f56a6a !important;
+  color: #fff !important;
   cursor: pointer;
   display: inline-block;
   font-family: "Roboto Slab", serif;
@@ -1638,9 +1639,12 @@ button,
       display: block;
       height: 10em;
       line-height: 10em;
+      color: #ffffff !important;
       margin: 0 2em 0 0;
       text-align: center;
-      width: 10em; }
+      width: 10em;
+      color: black;
+       }
       .features article .icon:before {
         color: #f56a6a;
         font-size: 2.75rem;
@@ -2187,7 +2191,8 @@ button,
 
 /* Footer */
 #footer .copyright {
-  color: #9fa3a6;
+  color: green;
+  background-color: pink; 
   font-size: 0.9em; }
   #footer .copyright a {
     color: inherit; }
